# notion-backup

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example-config.yaml  pyproject.toml
.github/workflows/: publish.yml
.private-journal/2026-01-05/: 20-56-07-874810.embedding  20-56-07-874810.md
.private-journal/2026-01-06/: 11-54-43-797276.embedding  11-54-43-797276.md
data/: config.yaml
deploy/homelab/: README.md  backup-stack-service.yaml  grafana-notion-backup-alerts.yaml  notion-backup.yaml  prometheus-scrape.yaml
docs/: MONITORING.md  external-fixes.md
plan/: IMPLEMENTATION.md  PROGRESS.md  SPEC.md  USER_INFO.md  denis-plan.md
src/notion_backup/: __init__.py  __main__.py  concurrency.py  config.py  logging_config.py  metrics.py  notifications.py  retention.py  scheduler.py
src/notion_backup/backup/: __init__.py  files.py  manifest.py  storage.py
src/notion_backup/markdown/: __init__.py  converter.py  writer.py
src/notion_backup/notion/: __init__.py  client.py  databases.py  pages.py
tests/: __init__.py  test_client_retry.py  test_files_urls.py  test_logging.py  test_manifest.py  test_metrics.py  test_pages_resilience.py  test_serve_seeding.py
